--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 
 
 </head>
-<body id="container">
 
-<div id="myHeader" class="header">
+<body id="container">
+<script src="script.js"></script>
+
+<div id="myHeader" class="header container">
     <h1>My To Do List</h1>
     <div class="header-add">
         <i class="fas fa-pencil-alt"></i><input type="text" id="myInput" placeholder="add task...">
