--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body id="container">
 <script src="script.js"></script>
 
-<div id="myHeader" class="header container">
+<div id="myHeader" class="header">
     <h1>My To Do List</h1>
     <div class="header-add">
         <i class="fas fa-pencil-alt"></i><input type="text" id="myInput" placeholder="add task...">
