--- a/index.html
+++ b/index.html
@@ -14,7 +14,16 @@
 </head>
 
 <body id="container">
+
+<!-- script - moja praca -->
 <script src="script.js"></script>
+
+<!--poniżej script mentor maciek film  -->
+
+
+<!--<script src="../../../../Zadanie - PROJEKT JS/ToDo-GitMaciej-WSTĘP/ToDo-Schema/script.js"></script>-->
+
+
 
 <div id="myHeader" class="header">
     <h1>My To Do List</h1>
@@ -26,11 +35,12 @@
 
 
 <ul id="list">
-    <li> Hit the gym</li>
-    <li class="checked"> Pay Bils</li>
-    <li>Meet George</li>
-    <li>Buy eggs</li>
-    <li>Organize office</li>
+
+<!--    <li> Hit the gym</li>-->
+<!--    <li class="checked"> Pay Bils</li>-->
+<!--    <li>Meet George</li>-->
+<!--    <li>Buy eggs</li>-->
+<!--    <li>Organize office</li>-->
 
 </ul>
 
