--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 
 <body id="container">
 
+
+<!--<script src="../../../../Zadanie - PROJEKT JS/ToDo-GitMaciej-WSTĘP/ToDo-Schema/script.js"></script>-->
+
 <script src="script.js"></script>
 
 <div id="myHeader" class="header">
