step4 - popup and button

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <!--<script src="../../../../Zadanie - PROJEKT JS/ToDo-GitMaciej-WSTĘP/ToDo-Schema/script.js"></script>-->
 
-<script src="script.js"></script>
+
 
 <div id="myHeader" class="header">
     <h1>My To Do List</h1>
@@ -42,7 +42,7 @@
 <div id="myModal" class="modal">
     <!--Modal content-->
     <div class="modal-content">
-        <span id="closePopup" class="close"></span>
+        <span id="closePopup" class="close">X</span>
         <div id="addForm" class="header">
             <input type="text" id="popupInput" placeholder="Title...">
             <button id="btn_cancel" class="addBtn">CANCEL</button>
@@ -50,5 +50,7 @@
         </div>
     </div>
 </div>
+
+<script src="script.js"></script>
 </body>
 </html>
