--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <div id="myModal" class="modal">
     <!--Modal content-->
     <div class="modal-content">
+        <h1>Edit this To Do</h1>
         <span id="closeBtn" class="close">X</span>
         <div id="addForm" class="header">
             <input type="text" id="popupInput" placeholder="Title...">
