ajax - oddzielny plik

--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
         </div>
     </div>
 </div>
-<script src="js/script.js"></script>
+<script src="js/scriptTest.js"></script> <!-- plik z testami ajax -->
+
+
+<!--<script src="js/script.js"></script> &lt;!&ndash; original js &ndash;&gt;-->
+
+
 </body>
 </html>
 
