--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/main.css">
     <link rel="stylesheet" href="icons/fontawesome-free-5.8.2-web/css/all.css">
+
 </head>
 <body id="container">
 <div id="myHeader" class="header">
@@ -34,6 +35,7 @@
 </div>
 <script src="js/scriptTest.js"></script> <!-- plik z testami ajax -->
 
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
 <!--<script src="js/script.js"></script> &lt;!&ndash; original js &ndash;&gt;-->
 
