--- a/index.html
+++ b/index.html
@@ -1,45 +1,49 @@
 <!DOCTYPE html>
 <html lang="pl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Projekt zaliczeniowy nr 2 To Do list</title>
-    <link rel="stylesheet" href="style/reset.css">
-    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style/main.css">
-    <link rel="stylesheet" href="icons/fontawesome-free-5.8.2-web/css/all.css">
-
-</head>
-<body id="container">
-<div id="myHeader" class="header">
-    <h1>Things To Do</h1>
-    <div class="header-add">
-        <i class="fas fa-pencil-alt"></i><input type="text" id="myInput" placeholder="new task to do... ">
+    <link rel="stylesheet" href="style/reset.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style/main.css" />
+    <link
+      rel="stylesheet"
+      href="icons/fontawesome-free-5.8.2-web/css/all.css"
+    />
+  </head>
+  <body id="container">
+    <div id="myHeader" class="header">
+      <h1>Things To Do</h1>
+      <div class="header-add">
+        <i class="fas fa-pencil-alt"></i
+        ><input type="text" id="myInput" placeholder="new task to do... " />
         <button id="addTodo" class="addBtn">Add</button>
+      </div>
     </div>
-</div>
-<ul id="list"></ul>
+    <ul id="list"></ul>
 
-<div id="myModal" class="modal">
-    <!--Modal content-->
-    <div class="modal-content">
+    <div id="myModal" class="modal">
+      <!--Modal content-->
+      <div class="modal-content">
         <h1>Edit this To Do</h1>
         <span id="closeBtn" class="close">X</span>
         <div id="addForm" class="header">
-            <input type="text" id="popupInput" placeholder="Title...">
-            <button id="btn_cancel" class="addBtn">CANCEL</button>
-            <button id="btn_done" class="addBtn">OK</button>
+          <input type="text" id="popupInput" placeholder="Title..." />
+          <button id="btn_cancel" class="addBtn">CANCEL</button>
+          <button id="btn_done" class="addBtn">OK</button>
         </div>
+      </div>
     </div>
-</div>
-<script src="js/scriptTest.js"></script> <!-- plik z testami ajax -->
+    <script src="js/scriptTest.js"></script>
+    <!-- plik z testami ajax -->
 
-<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
-<!--<script src="js/script.js"></script> &lt;!&ndash; original js &ndash;&gt;-->
-
-
-</body>
+    <!--<script src="js/script.js"></script> &lt;!&ndash; original js &ndash;&gt;-->
+  </body>
 </html>
-
